Update SCons [skip ci]

--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -14,10 +14,12 @@ requirements:
     - python
     - networkx
     - pyyaml
+    - path.py
   run:
     - python
     - networkx
     - pyyaml
+    - path.py
 test:
   files:
     - SConstruct
