--- a/conda/SConscript
+++ b/conda/SConscript
@@ -8,25 +8,26 @@ sources = conda_env.Glob('*')
 
 # Exclude here all Conda recipes that must not be built
 exclude = """
-python-scons
 """.split()
 
 sources = [source for source in sources if not source.name in exclude]
 
 targets = conda_env.CondaPackages(sources)
-Alias("build", targets)
+Alias("conda-build", targets)
 
-targets = conda_env.AnacondaUpload(sources)
-Alias("upload", targets)
+# targets = conda_env.AnacondaUpload(sources)
+# Alias("anaconda-upload", targets)
 
 # Exclude here all Conda recipes that must not be installed
 # in the current Environment. These recipes that must not be
 # installed corresponds to all recipes for which code source
 # is located in the current repository.
 exclude = """
+python-scons
 """.split()
 
 sources = [source for source in sources if not source.name in exclude]
 
 targets = conda_env.CondaEnvironment(sources)
+Alias("conda-install", targets)
 Alias("install", targets)
