--- a/conda/python-doc/meta.yaml
+++ b/conda/python-doc/meta.yaml
@@ -30,10 +30,8 @@ requirements:
     - python
     - sphinx
     - cmake
-    - zlib
-    - jpeg
+    - pillow
   run:
     - python
     - sphinx
-    - cmake
-    - jpeg
+    - pillow
