--- a/conda/llvm/meta.yaml
+++ b/conda/llvm/meta.yaml
@@ -16,20 +16,20 @@
 
 package:
   name: llvm
-  version: "3.8.1"
+  version: "3.9.1"
 
 source:
-  fn: llvm-3.8.1.src.tar.xz
-  url: http://llvm.org/releases/3.8.1/llvm-3.8.1.src.tar.xz
-  patches:
-    # https://llvm.org/bugs/show_bug.cgi?id=15356
-    - {{ RECIPE_DIR }}/llvm-elf-relocation.patch
-    # https://llvm.org/bugs/show_bug.cgi?id=25788
-    - {{ RECIPE_DIR }}/llvm-parse-fp-constants.patch
-    # https://llvm.org/bugs/show_bug.cgi?id=25565
-    - {{ RECIPE_DIR }}/llvm-build-race-condition.patch
-    # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
-    - {{ RECIPE_DIR }}/llvm-lto-static.patch                      [win]
+  fn: llvm-3.9.1.src.tar.xz
+  url: http://llvm.org/releases/3.9.1/llvm-3.9.1.src.tar.xz
+  # patches:
+  #   # https://llvm.org/bugs/show_bug.cgi?id=15356
+  #   - {{ RECIPE_DIR }}/llvm-elf-relocation.patch
+  #   # https://llvm.org/bugs/show_bug.cgi?id=25788
+  #   - {{ RECIPE_DIR }}/llvm-parse-fp-constants.patch
+  #   # https://llvm.org/bugs/show_bug.cgi?id=25565
+  #   - {{ RECIPE_DIR }}/llvm-build-race-condition.patch
+  #   # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
+  #   - {{ RECIPE_DIR }}/llvm-lto-static.patch                      [win]
     
 build:
   number: 0
