--- a/conda/libdev/meta.yaml
+++ b/conda/libdev/meta.yaml
@@ -1,19 +1,3 @@
-##################################################################################
-#                                                                                #
-# PyClangLite: Python bindings for Clang                                         #
-#                                                                                #
-# Homepage: http://pyclanglite.readthedocs.io/                                   #
-#                                                                                #
-# Copyright (c) 2016 Pierre Fernique                                             #
-#                                                                                #
-# This software is distributed under the CeCILL-C license. You should have       #
-# received a copy of the legalcode along with this work. If not, see             #
-# <http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html>.                 #
-#                                                                                #
-# File authors: Pierre Fernique <pfernique@gmail.com> (26)                       #
-#                                                                                #
-##################################################################################
-
 package:
   name: libdev
   version: "1.0.0"
@@ -26,7 +10,7 @@ build:
     - vc14                 [win and py35]
 
 about:
-  home: http://statiskit.readthedocs.io/
+  home: http://statiskit.readthedocs.io
   license: CeCILL
   
 requirements:
