--- a/conda/python-pkg/meta.yaml
+++ b/conda/python-pkg/meta.yaml
@@ -1,19 +1,3 @@
-##################################################################################
-#                                                                                #
-# PkgTk: Tool kit for Python packages                                            #
-#                                                                                #
-# Homepage: pkg.readthedocs.io                                                 #
-#                                                                                #
-# Copyright (c) 2016 Pierre Fernique                                             #
-#                                                                                #
-# This software is distributed under the CeCILL-C license. You should have       #
-# received a copy of the legalcode along with this work. If not, see             #
-# <http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html>.                 #
-#                                                                                #
-# File authors: Pierre Fernique <pfernique@gmail.com> (11)                       #
-#                                                                                #
-##################################################################################
-
 package:
     name: python-pkg
     version: "1.0.0"
@@ -26,7 +10,7 @@ build:
     preserve_egg_dir: True
   
 about:
-    home: http://pkg.readthedocs.org
+    home: http://statiskit.readthedocs.org
     license: CeCILL
 
 requirements:
