--- a/conda/libboost/meta.yaml
+++ b/conda/libboost/meta.yaml
@@ -4,9 +4,9 @@ package:
   version: 1.61.0
 
 source:
-  fn:  boost_1_61_0.tar.bz2
-  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
-  # md5: 6095876341956f65f9d35939ccea1a9f
+  path: boost_1_61_0
+  # fn:  boost_1_61_0.tar.bz2
+  # url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
 
 build:
   number: 0
