--- a/conda/libdev/meta.yaml
+++ b/conda/libdev/meta.yaml
@@ -5,9 +5,10 @@ package:
 build:
   number: 0
   track_features:
-    - vc9                  [win and py27]
-    - vc10                 [win and py34]
-    - vc14                 [win and py35]
+    # - vc9                 [win and py27]
+    # - vc10                [win and py34]
+    # - vc14                [win and py35]
+    - vc14                 [win]
 
 about:
   home: http://statiskit.readthedocs.io
@@ -18,13 +19,15 @@ requirements:
     - python
     - python-scons
     - pywin32             [win]
-    - vs2008_runtime      [win and py27]
-    - vs2010_runtime      [win and py34]
-    - vs2015_runtime      [win and py35]
+    # - vs2008_runtime      [win and py27]
+    # - vs2010_runtime      [win and py34]
+    # - vs2015_runtime      [win and py35]
+    - vs2015_runtime      [win]
   run:
     - python
     - python-scons
     - pywin32             [win]
-    - vs2008_runtime      [win and py27]
-    - vs2010_runtime      [win and py34]
-    - vs2015_runtime      [win and py35]
+    # - vs2008_runtime      [win and py27]
+    # - vs2010_runtime      [win and py34]
+    # - vs2015_runtime      [win and py35]
+    - vs2015_runtime      [win]
