--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,8 @@ environment:
     # - RECIPE: vcs
     # - RECIPE: python-scons
     # - RECIPE: python-parse
-    - RECIPE: libdev
-    - RECIPE: librun
+    # - RECIPE: libdev
+    # - RECIPE: librun
     # - RECIPE: python-dev
     # - RECIPE: python-dbg
     # - RECIPE: python-doc
