Update Toolchain for MSVC 12

--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -22,8 +22,10 @@ test:
   files:
     - SConstruct
   commands:
+    - echo first [win]
     - scons %SCONSFLAGS%    [win]
     - scons $SCONSFLAGS     [not win]
+    - echo second [win]
     - scons
 
 about:
