--- a/conda/python-dev/meta.yaml
+++ b/conda/python-dev/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     - pyyaml
     - nose
     - coverage
+    - ipdb
   run:
     - python
     - setuptools
@@ -28,3 +29,4 @@ requirements:
     - pyyaml
     - nose
     - coverage
+    - ipdb
