--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -3,8 +3,9 @@ package:
   version: "2.5.0"
 
 source:
-  path: scons-2.5.0-py27    [py27]
-  path: scons-2.5.0-py35    [py35]
+  fn: scons-2.5.0.tar.gz
+  url: https://pypi.python.org/packages/source/S/SCons/scons-2.5.0.tar.gz
+  md5: bda5530a70a41a7831d83c8b191c021e
 
 build:
   number: 0
