--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -4,8 +4,7 @@ package:
 
 source:
   fn: scons-2.5.0.tar.gz
-  url: https://pypi.python.org/packages/source/S/SCons/scons-2.5.0.tar.gz
-  md5: bda5530a70a41a7831d83c8b191c021e
+  url: https://sourceforge.net/projects/scons/files/scons/2.5.0/scons-2.5.0.tar.gz
 
 build:
   number: 0
