Add ipdb debugger within nose

--- a/travis.yml
+++ b/travis.yml
@@ -54,8 +54,11 @@ before_script:
   - source before_script.sh
 
 script:
-  - if [[ "$RECIPE" = "libboost" ]]; then
+  - if [[ "$RECIPE" = "libboost" && "$TRAVIS_OS_NAME" = "linux" ]]; then
       export TRAVIS_WAIT=true;
+    fi
+  - if [[ "$RECIPE" = "libboost" && "$TRAVIS_OS_NAME" = "osx" ]]; then
+      export TRAVIS_WAIT="travis_wait 30";
     fi
   - source script.sh
 
