--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ environment:
     - RECIPE: librun
     - RECIPE: python-dev
     - RECIPE: python-doc
-    - RECIPE: python-pkg
+    # - RECIPE: python-pkg
     - RECIPE: llvm
     - RECIPE: clang
     - RECIPE: python-clang
