--- a/travis.yml
+++ b/travis.yml
@@ -30,7 +30,7 @@ env:
   - RECIPE=librun
   - RECIPE=python-dev
   - RECIPE=python-doc
-  - RECIPE=python-pkg
+  # - RECIPE=python-pkg
   - RECIPE=llvm
   - RECIPE=clang
   - RECIPE=python-clang
