Add r-mglm recipe

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ platform:
 
 environment:
   matrix:
+    - RECIPE: r-mglm
     - RECIPE: vcs
     - RECIPE: python-scons
     - RECIPE: python-parse
