--- a/conda/pypandoc/meta.yaml
+++ b/conda/pypandoc/meta.yaml
@@ -12,11 +12,11 @@ build:
 
 requirements:
   build:
-    - python
+    - python=2.7
     - setuptools
     - pandoc
   run:
-    - python
+    - python=2.7
     - pandoc
 
 test:
