--- a/conda/python-clang/meta.yaml
+++ b/conda/python-clang/meta.yaml
@@ -20,6 +20,6 @@ requirements:
     - xz                         [unix]
     - m2w64-xz           [py27 and win] 
   run:
-    - python
+    - python=2.7
     - clang
     - path.py
