--- a/conda/python-doc/meta.yaml
+++ b/conda/python-doc/meta.yaml
@@ -11,11 +11,11 @@ about:
 
 requirements:
   build:
-    - python=2.7
+    - python 2.7
     - sphinx
     - cmake
     - pillow
   run:
-    - python=2.7
+    - python 2.7
     - sphinx
     - pillow
