--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -11,11 +11,11 @@ build:
 
 requirements:
   build:
-    - python=2.7
+    - python 2.7
     - pyyaml
     - path.py
   run:
-    - python=2.7
+    - python 2.7
     - pyyaml
     - path.py
 test:
