Update recipes and Travis CI

--- a/bin/conda/libboost/meta.yaml
+++ b/bin/conda/libboost/meta.yaml
@@ -15,14 +15,14 @@ about:
 
 requirements:
   build:
-    - python 2.7*
+    - python
     - libdev
     - python
     - icu 58.*          [unix]
     - bzip2             [unix]
     - zlib
   run:
-    - python 2.7*
+    - python
     - icu 58.*          [unix]
     - zlib
     - librun
