--- a/bin/conda/python-scons/meta.yaml
+++ b/bin/conda/python-scons/meta.yaml
@@ -25,6 +25,7 @@ test:
   files:
     - SConstruct
   commands:
+    - echo $SCONSFLAGS      [not win]
     - scons $SCONSFLAGS     [not win]
     - scons                 [not win]
 
