--- a/travis.yml
+++ b/travis.yml
@@ -29,14 +29,29 @@ env:
   - CONDA_RECIPE=python-scons
     PYTHON_VERSION=3.5
   - CONDA_RECIPE=python-parse
+    PYTHON_VERSION=2.7
+  - CONDA_RECIPE=python-parse
+    PYTHON_VERSION=3.5
   - CONDA_RECIPE=libdev
   - CONDA_RECIPE=librun
   - CONDA_RECIPE=python-dev
+    PYTHON_VERSION=2.7
+  - CONDA_RECIPE=python-dev
+    PYTHON_VERSION=3.5
   - CONDA_RECIPE=python-doc
+    PYTHON_VERSION=2.7
+  - CONDA_RECIPE=python-doc
+    PYTHON_VERSION=3.5
   - CONDA_RECIPE=llvm
   - CONDA_RECIPE=clang
   - CONDA_RECIPE=python-clang
+    PYTHON_VERSION=2.7
+  - CONDA_RECIPE=python-clang
+    PYTHON_VERSION=3.5
   - CONDA_RECIPE=libboost
+    PYTHON_VERSION=2.7
+  - CONDA_RECIPE=libboost
+    PYTHON_VERSION=3.5
   - DOCKERFILE=ubuntu
     
 matrix:
