--- a/travis.yml
+++ b/travis.yml
@@ -49,7 +49,13 @@ env:
   - CONDA_RECIPE=python-doc
     PYTHON_VERSION=3
   - CONDA_RECIPE=llvm
+    PYTHON_VERSION=2
+  - CONDA_RECIPE=llvm
+    PYTHON_VERSION=3
   - CONDA_RECIPE=clang
+    PYTHON_VERSION=2
+  - CONDA_RECIPE=clang
+    PYTHON_VERSION=3
   - CONDA_RECIPE=python-clang
     PYTHON_VERSION=2
   - CONDA_RECIPE=python-clang
