--- a/travis.yml
+++ b/travis.yml
@@ -28,34 +28,34 @@ env:
     PYTHON_VERSION=2
   - CONDA_RECIPE=python-scons
     PYTHON_VERSION=3
-  - CONDA_RECIPE=python-parse
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=python-parse
-    PYTHON_VERSION=3
-  - CONDA_RECIPE=libdev
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=libdev
-    PYTHON_VERSION=3
-  - CONDA_RECIPE=librun
-  - CONDA_RECIPE=python-dev
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=python-dev
-    PYTHON_VERSION=3
-  - CONDA_RECIPE=python-doc
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=python-doc
-    PYTHON_VERSION=3
-  - CONDA_RECIPE=llvm
-  - CONDA_RECIPE=clang
-  - CONDA_RECIPE=python-clang
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=python-clang
-    PYTHON_VERSION=3
-  - CONDA_RECIPE=libboost
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=libboost
-    PYTHON_VERSION=3
-  - DOCKERFILE=ubuntu
+  # - CONDA_RECIPE=python-parse
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=python-parse
+  #   PYTHON_VERSION=3
+  # - CONDA_RECIPE=libdev
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=libdev
+  #   PYTHON_VERSION=3
+  # - CONDA_RECIPE=librun
+  # - CONDA_RECIPE=python-dev
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=python-dev
+  #   PYTHON_VERSION=3
+  # - CONDA_RECIPE=python-doc
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=python-doc
+  #   PYTHON_VERSION=3
+  # - CONDA_RECIPE=llvm
+  # - CONDA_RECIPE=clang
+  # - CONDA_RECIPE=python-clang
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=python-clang
+  #   PYTHON_VERSION=3
+  # - CONDA_RECIPE=libboost
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=libboost
+  #   PYTHON_VERSION=3
+  # - DOCKERFILE=ubuntu
     
 matrix:
   exclude:
@@ -64,10 +64,7 @@ matrix:
   allow_failures:
     - os: osx
       env: CONDA_RECIPE=llvm
-           PYTHON_VERSION=2
-    - os: osx
-      env: CONDA_RECIPE=llvm
-           PYTHON_VERSION=3      
+         
 install:
   - git clone https://github.com/StatisKit/travis-ci.git
   - cd travis-ci
