Update for Python 3

--- a/travis.yml
+++ b/travis.yml
@@ -24,10 +24,10 @@ env:
   # - CONDA_RECIPE=gcc 
   # - CONDA_RECIPE=libgcc
   # - CONDA_RECIPE=vcs
-  - CONDA_RECIPE=python-scons
-    PYTHON_VERSION=2
-  - CONDA_RECIPE=python-scons
-    PYTHON_VERSION=3
+  # - CONDA_RECIPE=python-scons
+  #   PYTHON_VERSION=2
+  # - CONDA_RECIPE=python-scons
+  #   PYTHON_VERSION=3
   # - CONDA_RECIPE=python-parse
   #   PYTHON_VERSION=2
   # - CONDA_RECIPE=python-parse
@@ -37,10 +37,10 @@ env:
   # - CONDA_RECIPE=libdev
   #   PYTHON_VERSION=3
   # - CONDA_RECIPE=librun
-  # - CONDA_RECIPE=python-dev
-  #   PYTHON_VERSION=2
-  # - CONDA_RECIPE=python-dev
-  #   PYTHON_VERSION=3
+  - CONDA_RECIPE=python-dev
+    PYTHON_VERSION=2
+  - CONDA_RECIPE=python-dev
+    PYTHON_VERSION=3
   # - CONDA_RECIPE=python-doc
   #   PYTHON_VERSION=2
   # - CONDA_RECIPE=python-doc
