--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,36 +12,36 @@ environment:
   matrix:
     - CONDA_RECIPE: vcs
     - CONDA_RECIPE: python-scons
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: python-scons
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
     - CONDA_RECIPE: python-parse
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: python-parse
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
     - CONDA_RECIPE: libdev
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: libdev
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
     - CONDA_RECIPE: librun
     - CONDA_RECIPE: python-dev
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: python-dev
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
     - CONDA_RECIPE: python-doc
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: python-doc
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
     - CONDA_RECIPE: llvm
     - CONDA_RECIPE: clang
     - CONDA_RECIPE: python-clang
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: python-clang
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
     - CONDA_RECIPE: libboost
-      PYTHON_VERSION: 2
+      CONDA_VERSION: 2
     - CONDA_RECIPE: libboost
-      PYTHON_VERSION: 3
+      CONDA_VERSION: 3
       
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git
