--- a/travis.yml
+++ b/travis.yml
@@ -25,36 +25,36 @@ env:
   # - CONDA_RECIPE=libgcc
   - CONDA_RECIPE=vcs
   - CONDA_RECIPE=python-scons
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=python-scons
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - CONDA_RECIPE=python-parse
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=python-parse
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - CONDA_RECIPE=libdev
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=libdev
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - CONDA_RECIPE=librun
   - CONDA_RECIPE=python-dev
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=python-dev
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - CONDA_RECIPE=python-doc
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=python-doc
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - CONDA_RECIPE=llvm
   - CONDA_RECIPE=clang
   - CONDA_RECIPE=python-clang
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=python-clang
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - CONDA_RECIPE=libboost
-    PYTHON_VERSION=2
+    CONDA_VERSION=2
   - CONDA_RECIPE=libboost
-    PYTHON_VERSION=3
+    CONDA_VERSION=3
   - DOCKERFILE=ubuntu
     
 matrix:
