--- a/travis.yml
+++ b/travis.yml
@@ -53,14 +53,25 @@ env:
     CONDA_VERSION=3
   - CONDA_RECIPE=libboost
     CONDA_VERSION=2
+    TRAVIS_WAIT=30
   - CONDA_RECIPE=libboost
     CONDA_VERSION=3
+    TRAVIS_WAIT=30
   - DOCKERFILE=ubuntu
-    
+    CONDA_VERSION=2
+  - DOCKERFILE=ubuntu
+    CONDA_VERSION=3
+
 matrix:
   exclude:
-  - os: osx
-    env: DOCKERFILE=ubuntu
+    - os: osx
+      env: 
+        - DOCKERFILE=ubuntu
+        - CONDA_VERSION=2
+    - os: osx
+      env: 
+        - DOCKERFILE=ubuntu
+        - CONDA_VERSION=3
   allow_failures:
     - os: osx
       env: CONDA_RECIPE=llvm
@@ -74,12 +85,6 @@ before_script:
   - source before_script.sh
 
 script:
-  - if [[ "$CONDA_RECIPE" = "libboost" && "$TRAVIS_OS_NAME" = "linux" ]]; then
-      export TRAVIS_WAIT=true;
-    fi
-  - if [[ "$CONDA_RECIPE" = "libboost" && "$TRAVIS_OS_NAME" = "osx" ]]; then
-      export TRAVIS_WAIT=30;
-    fi
   - source script.sh
 
 after_success:
