--- a/bin/conda/mpfr/meta.yaml
+++ b/bin/conda/mpfr/meta.yaml
@@ -4,7 +4,8 @@ package:
 
 source:
   fn: mpfr-3.1.2.tar.bz2
-  url: http://www.mpfr.org/mpfr-3.1.2/mpfr-3.1.2.tar.bz2
+  url: https://ftp.gnu.org/gnu/mpfr/mpfr-3.1.2.tar.bz2
+  # url: http://www.mpfr.org/mpfr-3.1.2/mpfr-3.1.2.tar.bz2
   #md5: 8cb9c412e5f2d96bc6f459aa8c6282a1
 
 
