--- a/travis.yml
+++ b/travis.yml
@@ -15,7 +15,7 @@ services:
   - docker
   
 env:
-  # - CONDA_RECIPE=gmp
+  - CONDA_RECIPE=gmp
   - CONDA_RECIPE=mpfr
   - CONDA_RECIPE=mpc
   - CONDA_RECIPE=isl
@@ -23,7 +23,8 @@ env:
   - CONDA_RECIPE=binutils
   - CONDA_RECIPE=glibc
   - CONDA_RECIPE=linux-headers
-  - CONDA_RECIPE=gcc 
+  - CONDA_RECIPE=gcc
+    TRAVIS_WAIT=40
   # - CONDA_RECIPE=libgcc
   # - CONDA_RECIPE=vcs
   # - CONDA_RECIPE=python-scons
@@ -75,10 +76,10 @@ matrix:
     - os: osx
       env: CONDA_RECIPE=glibc
     - os: osx
-      env: CONDA_RECIPE=glibc
-  allow_failures:
-    - os: osx
       env: CONDA_RECIPE=linux-headers
+  # allow_failures:
+  #   - os: osx
+  #     env: CONDA_RECIPE=linux-headers
          
 install:
   - git clone https://github.com/StatisKit/travis-ci.git
