--- a/bin/conda/mpc/meta.yaml
+++ b/bin/conda/mpc/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: mpc
-  version: 1.0.1
+  version: 1.0.3
 
 source:
-  url: http://www.multiprecision.org/mpc/download/mpc-1.0.1.tar.gz
-  fn: mpc-1.0.1.tar.gz
+  url: http://www.multiprecision.org/mpc/download/mpc-1.0.3.tar.gz
+  fn: mpc-1.0.3.tar.gz
 
 build:
   detect_binary_files_with_prefix: True
@@ -12,11 +12,11 @@ build:
   
 requirements:
   build:
-    - gmp
-    - mpfr
+    - gmp >=6.1.0
+    - mpfr >=3.1.4
   run:
-    - gmp
-    - mpfr
+    - gmp >=6.1.0
+    - mpfr >=3.1.4
 
 about:
   home: http://www.multiprecision.org/
