--- a/bin/conda/isl/meta.yaml
+++ b/bin/conda/isl/meta.yaml
@@ -5,7 +5,7 @@ package:
 source:
   fn: isl-0.16.1.tar.bz2
   url: ftp://gcc.gnu.org/pub/gcc/infrastructure/isl-0.16.1.tar.bz2
-  sha1: ca98a91e35fb3ded10d080342065919764d6f928
+  # sha1: ca98a91e35fb3ded10d080342065919764d6f928
 
 build:
   number: 2
