--- a/travis.yml
+++ b/travis.yml
@@ -16,54 +16,54 @@ services:
   
 env:
   # - CONDA_RECIPE=binutils
-  - CONDA_RECIPE=gmp
-  - CONDA_RECIPE=mpfr
-  - CONDA_RECIPE=mpc
-  - CONDA_RECIPE=isl
-  - CONDA_RECIPE=cloog
-  - CONDA_RECIPE=glibc
-  - CONDA_RECIPE=linux-headers
-  - CONDA_RECIPE=gcc
-    TRAVIS_WAIT=50
+  # - CONDA_RECIPE=gmp
+  # - CONDA_RECIPE=mpfr
+  # - CONDA_RECIPE=mpc
+  # - CONDA_RECIPE=isl
+  # - CONDA_RECIPE=cloog
+  # - CONDA_RECIPE=glibc
+  # - CONDA_RECIPE=linux-headers
+  # - CONDA_RECIPE=gcc
+  #   TRAVIS_WAIT=50
   # - CONDA_RECIPE=libgcc
-  # - CONDA_RECIPE=vcs
-  # - CONDA_RECIPE=python-scons
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-scons
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=python-parse
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-parse
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=libdev
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=libdev
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=librun
-  # - CONDA_RECIPE=python-dev
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-dev
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=python-doc
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-doc
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=llvm
-  # - CONDA_RECIPE=clang
-  # - CONDA_RECIPE=python-clang
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-clang
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=libboost
-  #   CONDA_VERSION=2
-  #   TRAVIS_WAIT=30
-  # - CONDA_RECIPE=libboost
-  #   CONDA_VERSION=3
-  #   TRAVIS_WAIT=30
-  # - DOCKERFILE=ubuntu
-  #   CONDA_VERSION=2
-  # - DOCKERFILE=ubuntu
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=vcs
+  - CONDA_RECIPE=python-scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-scons
+    CONDA_VERSION=3
+  - CONDA_RECIPE=python-parse
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-parse
+    CONDA_VERSION=3
+  - CONDA_RECIPE=libdev
+    CONDA_VERSION=2
+  - CONDA_RECIPE=libdev
+    CONDA_VERSION=3
+  - CONDA_RECIPE=librun
+  - CONDA_RECIPE=python-dev
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-dev
+    CONDA_VERSION=3
+  - CONDA_RECIPE=python-doc
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-doc
+    CONDA_VERSION=3
+  - CONDA_RECIPE=llvm
+  - CONDA_RECIPE=clang
+  - CONDA_RECIPE=python-clang
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-clang
+    CONDA_VERSION=3
+  - CONDA_RECIPE=libboost
+    CONDA_VERSION=2
+    TRAVIS_WAIT=30
+  - CONDA_RECIPE=libboost
+    CONDA_VERSION=3
+    TRAVIS_WAIT=30
+  - DOCKERFILE=ubuntu
+    CONDA_VERSION=2
+  - DOCKERFILE=ubuntu
+    CONDA_VERSION=3
 
 matrix:
   exclude:
