--- a/travis.yml
+++ b/travis.yml
@@ -26,44 +26,44 @@ env:
   # - CONDA_RECIPE=gcc
   #   TRAVIS_WAIT=50
   # - CONDA_RECIPE=libgcc
-  - CONDA_RECIPE=vcs
-  - CONDA_RECIPE=python-scons
-    CONDA_VERSION=2
-  - CONDA_RECIPE=python-scons
-    CONDA_VERSION=3
-  - CONDA_RECIPE=python-parse
-    CONDA_VERSION=2
-  - CONDA_RECIPE=python-parse
-    CONDA_VERSION=3
-  - CONDA_RECIPE=libdev
-    CONDA_VERSION=2
-  - CONDA_RECIPE=libdev
-    CONDA_VERSION=3
-  - CONDA_RECIPE=librun
+  # - CONDA_RECIPE=vcs
+  # - CONDA_RECIPE=python-scons
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=python-scons
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=python-parse
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=python-parse
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=libdev
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=libdev
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=librun
   - CONDA_RECIPE=python-dev
     CONDA_VERSION=2
   - CONDA_RECIPE=python-dev
     CONDA_VERSION=3
-  - CONDA_RECIPE=python-doc
-    CONDA_VERSION=2
-  - CONDA_RECIPE=python-doc
-    CONDA_VERSION=3
-  - CONDA_RECIPE=llvm
-  - CONDA_RECIPE=clang
-  - CONDA_RECIPE=python-clang
-    CONDA_VERSION=2
-  - CONDA_RECIPE=python-clang
-    CONDA_VERSION=3
-  - CONDA_RECIPE=libboost
-    CONDA_VERSION=2
-    TRAVIS_WAIT=30
-  - CONDA_RECIPE=libboost
-    CONDA_VERSION=3
-    TRAVIS_WAIT=30
-  - DOCKERFILE=ubuntu
-    CONDA_VERSION=2
-  - DOCKERFILE=ubuntu
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=python-doc
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=python-doc
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=llvm
+  # - CONDA_RECIPE=clang
+  # - CONDA_RECIPE=python-clang
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=python-clang
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=libboost
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=30
+  # - CONDA_RECIPE=libboost
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=30
+  # - DOCKERFILE=ubuntu
+  #   CONDA_VERSION=2
+  # - DOCKERFILE=ubuntu
+  #   CONDA_VERSION=3
 
 matrix:
   exclude:
