--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,38 +10,42 @@ platform:
 
 environment:
   matrix:
-    - CONDA_RECIPE: vcs
+    # - CONDA_RECIPE: vcs
     - CONDA_RECIPE: python-scons
       CONDA_VERSION: 2
     - CONDA_RECIPE: python-scons
       CONDA_VERSION: 3
-    - CONDA_RECIPE: python-parse
+    - CONDA_RECIPE: python-statiskit_scons
       CONDA_VERSION: 2
-    - CONDA_RECIPE: python-parse
+    - CONDA_RECIPE: python-statiskit_scons
       CONDA_VERSION: 3
-    - CONDA_RECIPE: libdev
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: libdev
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: librun
-    - CONDA_RECIPE: python-dev
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: python-dev
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: python-doc
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: python-doc
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: llvm
-    - CONDA_RECIPE: clang
-    - CONDA_RECIPE: python-clang
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: python-clang
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: libboost
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: libboost
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: python-parse
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-parse
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: libdev
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: libdev
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: librun
+    # - CONDA_RECIPE: python-dev
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-dev
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: python-doc
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-doc
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: llvm
+    # - CONDA_RECIPE: clang
+    # - CONDA_RECIPE: python-clang
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-clang
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: libboost
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: libboost
+    #   CONDA_VERSION: 3
       
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git
