--- a/travis.yml
+++ b/travis.yml
@@ -27,10 +27,14 @@ env:
   #   TRAVIS_WAIT=50
   # - CONDA_RECIPE=libgcc
   # - CONDA_RECIPE=vcs
-  # - CONDA_RECIPE=python-scons
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-scons
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=python-scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-scons
+    CONDA_VERSION=3
+  - CONDA_RECIPE=python-statiskit_scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-statiskit_scons
+    CONDA_VERSION=3
   # - CONDA_RECIPE=python-parse
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=python-parse
@@ -40,10 +44,10 @@ env:
   # - CONDA_RECIPE=libdev
   #   CONDA_VERSION=3
   # - CONDA_RECIPE=librun
-  - CONDA_RECIPE=python-dev
-    CONDA_VERSION=2
-  - CONDA_RECIPE=python-dev
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=python-dev
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=python-dev
+  #   CONDA_VERSION=3
   # - CONDA_RECIPE=python-doc
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=python-doc
