--- a/bin/conda/gitflow/meta.yaml
+++ b/bin/conda/gitflow/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
   git_tag: 0.4.1
-  git_url: git@github.com:nvie/gitflow.git
+  git_url: https://github.com/nvie/gitflow.git
 
 build:
   number: 0
