--- a/bin/conda/python-clang/meta.yaml
+++ b/bin/conda/python-clang/meta.yaml
@@ -16,7 +16,7 @@ about:
 requirements:
   build:
     - python
-    - python-dev
+    - python-toolchain
     - zlib
     - xz                         [unix]
     - m2w64-xz                   [win] 
