--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,33 +10,33 @@ platform:
 
 environment:
   matrix:
-    - CONDA_RECIPE: gitflow
-    - CONDA_RECIPE: vcs
-    - CONDA_RECIPE: python-scons
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: python-scons
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: scons-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: scons-tools
-      CONDA_VERSION: 3
-    # - CONDA_RECIPE: python-parse
+    # - CONDA_RECIPE: gitflow
+    # - CONDA_RECIPE: vcs
+    # - CONDA_RECIPE: python-scons
     #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: python-parse
+    # - CONDA_RECIPE: python-scons
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: libtoolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: libtoolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: libruntime
-    - CONDA_RECIPE: python-toolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: python-toolchain
-      CONDA_VERSION: 3
-    # - CONDA_RECIPE: llvm
-    # - CONDA_RECIPE: clang
-    # - CONDA_RECIPE: python-clang
+    # - CONDA_RECIPE: scons-tools
     #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: scons-tools
+    #   CONDA_VERSION: 3
+    # # - CONDA_RECIPE: python-parse
+    # #   CONDA_VERSION: 2
+    # # - CONDA_RECIPE: python-parse
+    # #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: libtoolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: libtoolchain
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: libruntime
+    # - CONDA_RECIPE: python-toolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-toolchain
+    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: llvm
+    - CONDA_RECIPE: clang
+    - CONDA_RECIPE: python-clang
+      CONDA_VERSION: 2
     # - CONDA_RECIPE: python-clang
     #   CONDA_VERSION: 3
     # - CONDA_RECIPE: libboost
