--- a/bin/conda/clang/meta.yaml
+++ b/bin/conda/clang/meta.yaml
@@ -15,14 +15,14 @@ about:
 
 requirements:
   build:
-    - libdev
+    - libtoolchain
     - llvm
     - cmake
     - zlib
     - m2w64-xz          [py27 and win]
     - 7za               [win]
   run:
-    - librun
+    - libruntime
     - llvm
 
 test:
