--- a/bin/conda/llvm/meta.yaml
+++ b/bin/conda/llvm/meta.yaml
@@ -24,13 +24,13 @@ about:
 
 requirements:
   build:
-    - libdev
+    - libtoolchain
     - cmake
     - zlib
     - m2w64-xz          [py27 and win]
     - 7za               [win]
   run:
-    - librun
+    - libruntime
     
 test:
   commands:
