--- a/travis.yml
+++ b/travis.yml
@@ -32,10 +32,10 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=python-scons
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=scons-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=scons-tools
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=scons-tools
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=scons-tools
+  #   CONDA_VERSION=3
   # - CONDA_RECIPE=python-parse
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=python-parse
@@ -51,15 +51,15 @@ env:
   #   CONDA_VERSION=3
   # - CONDA_RECIPE=llvm
   # - CONDA_RECIPE=clang
-  - CONDA_RECIPE=python-clang
-    CONDA_VERSION=2
+  # - CONDA_RECIPE=python-clang
+  #   CONDA_VERSION=2
   # - CONDA_RECIPE=python-clang
   #   CONDA_VERSION=3
-  # - CONDA_RECIPE=libboost
-  #   CONDA_VERSION=2
-  #   TRAVIS_WAIT=30
-  # - CONDA_RECIPE=libboost
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=libboost
+    CONDA_VERSION=2
+    TRAVIS_WAIT=30
+  - CONDA_RECIPE=libboost
+    CONDA_VERSION=3
   #   TRAVIS_WAIT=30
   # - DOCKERFILE=ubuntu
   #   CONDA_VERSION=2
