--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,14 +16,14 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: python-scons
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: scons-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: scons-tools
-      CONDA_VERSION: 3
-    # # - CONDA_RECIPE: python-parse
-    # #   CONDA_VERSION: 2
-    # # - CONDA_RECIPE: python-parse
-    # #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: scons-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: scons-tools
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: python-parse
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-parse
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: libtoolchain
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: libtoolchain
@@ -35,14 +35,14 @@ environment:
     #   CONDA_VERSION: 3
     # - CONDA_RECIPE: llvm
     # - CONDA_RECIPE: clang
-    - CONDA_RECIPE: python-clang
-      CONDA_VERSION: 2
+    # - CONDA_RECIPE: python-clang
+    #   CONDA_VERSION: 2
     # - CONDA_RECIPE: python-clang
     #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: libboost
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: libboost
-    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: libboost
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: libboost
+      CONDA_VERSION: 3
       
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git
