--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,11 +39,15 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: python-clang
     #   CONDA_VERSION: 3
-      # - CONDA_RECIPE: libboost
-      #   CONDA_VERSION: 2
-      # - CONDA_RECIPE: libboost
-      #   CONDA_VERSION: 3
-      
+    # - CONDA_RECIPE: libboost
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: libboost
+    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: statiskit-toolchain
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: statiskit-toolchain
+      CONDA_VERSION: 3
+
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git
   - cd appveyor-ci
