--- a/travis.yml
+++ b/travis.yml
@@ -15,17 +15,6 @@ services:
   - docker
   
 env:
-  # - CONDA_RECIPE=binutils
-  # - CONDA_RECIPE=gmp
-  # - CONDA_RECIPE=mpfr
-  # - CONDA_RECIPE=mpc
-  # - CONDA_RECIPE=isl
-  # - CONDA_RECIPE=cloog
-  # - CONDA_RECIPE=glibc
-  # - CONDA_RECIPE=linux-headers
-  # - CONDA_RECIPE=gcc
-  #   TRAVIS_WAIT=50
-  # - CONDA_RECIPE=libgcc
   # - CONDA_RECIPE=gitflow
   # - CONDA_RECIPE=vcs
   # - CONDA_RECIPE=python-scons
@@ -61,6 +50,10 @@ env:
   # - CONDA_RECIPE=libboost
   #   CONDA_VERSION=3
   #   TRAVIS_WAIT=30
+  - CONDA_RECIPE=statiskit-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=statiskit-toolchain
+    CONDA_VERSION=3
   # - DOCKERFILE=ubuntu
   #   CONDA_VERSION=2
   # - DOCKERFILE=ubuntu
@@ -74,13 +67,6 @@ matrix:
     - os: osx
       env: DOCKERFILE=ubuntu
            CONDA_VERSION=3
-    - os: osx
-      env: CONDA_RECIPE=glibc
-    - os: osx
-      env: CONDA_RECIPE=linux-headers
-  # allow_failures:
-  #   - os: osx
-  #     env: CONDA_RECIPE=linux-headers
          
 install:
   - git clone https://github.com/StatisKit/travis-ci.git
