--- a/bin/conda/statiskit-toolchain/meta.yaml
+++ b/bin/conda/statiskit-toolchain/meta.yaml
@@ -15,6 +15,7 @@ requirements:
     - vcs
     - libtoolchain
     - python-toolchain
+    - libboost
     - python-autowig
     - python-clanglite
     - python
