--- a/bin/conda/libruntime/meta.yaml
+++ b/bin/conda/libruntime/meta.yaml
@@ -11,8 +11,9 @@ build:
     - vc14                 [win]
     
 about:
-  home: http://statiskit.readthedocs.io/
-  license: CeCILL
+  home: http://statiskit.rtfd.io/
+  license: Apache License 2.0
+  summary: Collection of utilities for using compiled libraries.
   
 requirements:
   build:
