--- a/bin/conda/llvm/meta.yaml
+++ b/bin/conda/llvm/meta.yaml
@@ -21,6 +21,7 @@ build:
 about:
   home: http://www.llvm.org/
   license: The University of Illinois/NCSA Open Source License
+  summary: The LLVM Project is a collection of modular and reusable compiler and toolchain technologies. Despite its name, LLVM has little to do with traditional virtual machines. The name "LLVM" itself is not an acronym; it is the full name of the project.
 
 requirements:
   build:
